package neh.memocards.domain.estudio.memocard;

public class RespuestaMemo {
    // Atributos
    private Long id;
    private String texto;
    private String rutaImagen;
    private String rutaAudio;
    private String rutaVideo;

    // Métodos (por implementar según necesidades)
}
